@@ -19,6 +19,8 @@ dh-make-perl (0.64) UNRELEASED; urgency=low
   * --refresh: fix pruning of binary package dependencies
     + also fix pruning of redundant perl(-base) (build-)dependencies
   * when looking for READMEs to include in .docs, skip debian/README.source
+  * do not rewrite completely debian/rules if it looks like using DH7 tiny
+    rules
 
   [ gregor herrmann ]
   * DhMakePerl: update_file_list() allows to --refresh --only docs and
